--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <ul>
                 <li>First Item</li>
                 <li>Second Item</li>
+                <li>Third Item</li>
             </ul>
         </p>
     </body>
