--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <li>First Item</li>
                 <li>Second Item</li>
                 <li>Third Item</li>
+                <li>Fourth Item</li>
             </ul>
         </p>
     </body>
